--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
             <input class="inp" type="text" placeholder="Search images..." name="search">
             <button type="submit" class="btn">Search</button>
         </form>
+        <h4 class="loading hide">Loading images.Please wait...</h4>
+        <ul class="list"></ul>
     </div>
     <script src="./main.js" type="module"></script>
 </body>
